Module 10 Video 5: Renamed feature-title and feature-desc to section-title and section-desc for reusability across different sections. Worked on media query for width up to 576px. Changed flex-direction of teams to be column. Reset the horizontal gap set on teams to 0px and changed the teams-image-container to have only 1 single column as a grid. Set a margin to teams-features to space it from the teams-image-container and 2 sides of the screen. Then worked on screen sizes from 576px to 992px. Changed the flex-direction of navbar to column to prevent horizontal scrollbar at little over 576px. Also changed flex-direction of teams to column. Reset the gap on teams to be 0px. Changed width of grid-images to be 100 percent of its parent. Otherwise, the images take up more than the width allocated to the flex-container teams and the teams-image-container grid also expands. Set a higher margin on teams-features for larger screen size. Created a section called some-facts and added a h3, paragraph and a facts-container which will be a grid container later. The container contains 4 facts which are the cards. Each card is a fact and has an image, a h4 and a h5.

--- a/styles/g3-architects.css
+++ b/styles/g3-architects.css
@@ -126,18 +126,55 @@ main > section {
   max-width: 537px;
 }
 
-.feature-title {
+.section-title {
   font-size: 2.8125rem;
   font-weight: 700;
+  margin-bottom: 24px;
 }
 
 #title-part-1 {
   font-weight: 500;
 }
 
+.section-desc {
+  line-height: 1.625rem;
+  margin-bottom: 32px;
+}
+
 @media screen and (max-width: 576px) {
   .navbar,
-  .navbar-menu {
+  .navbar-menu,
+  .teams {
     flex-direction: column;
+  }
+
+  .teams {
+    gap: 0px;
+  }
+
+  .teams-image-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .teams-features {
+    margin: 20px;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .navbar,
+  .teams {
+    flex-direction: column;
+  }
+
+  .teams {
+    gap: 0px;
+  }
+
+  .grid-image {
+    width: 100%;
+  }
+
+  .teams-features {
+    margin: 50px;
   }
 }
